# aqi_prediction_system_full

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  README.md  debug_data_fetch.py  pyproject.toml  requirements-prod.txt  requirements.txt  run_docker.ps1  run_training.py
.github/workflows/: ci.yml  deploy.yml  feature-pipeline.yml  training-pipeline.yml
api/: __init__.py  main.py
dashboard/: app.py
data/raw/: .gitkeep
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.pipeline  docker-compose.yml
docs/: project_report.md
models/: .gitkeep
pipelines/: __init__.py  feature_pipeline.py  training_pipeline.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  feature_engineering.py  ingestion.py
src/evaluation/: __init__.py  metrics.py
src/feature_store/: __init__.py  hopsworks_client.py
src/models/: __init__.py  classification.py  regression.py  timeseries.py
src/utils/: __init__.py  logger.py
tests/: __init__.py
tests/ml_validation/: __init__.py  test_model_quality.py
tests/unit/: test_features.py  test_models.py
