[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aqi-prediction-system"
version = "1.0.0"
description = "End-to-End Air Quality Index (AQI) Weather Prediction System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AI321L Student", email = "student@university.edu"}
]
keywords = ["machine-learning", "aqi", "air-quality", "mlops", "prediction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/student/aqi-prediction-system"
Repository = "https://github.com/student/aqi-prediction-system.git"
Documentation = "https://github.com/student/aqi-prediction-system#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*", "pipelines*", "dashboard*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | data
  | models
  | notebooks
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src", "api", "pipelines", "dashboard"]
skip = [".venv", "data", "models", "notebooks"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["data", "models", "notebooks", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src", "api", "pipelines"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
